--- a/Projeto_Google_Glass/fale-conosco.html
+++ b/Projeto_Google_Glass/fale-conosco.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8"/>
         <title>Tudo sobre Google Glass</title>
-        <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>    
-        <link rel="stylesheet" type="text/css" href="_css/form.css"/>
+        <link rel="stylesheet" type="text/css" href="css/estilo.css"/>    
+        <link rel="stylesheet" type="text/css" href="css/form.css"/>
     </head>
-    <script language="javascript" src="_javascript/funcoes.js"></script>
+    <script language="javascript" src="javascript/funcoes.js"></script>
     <script>
         function calc_total(){
             var qtd = parseInt(document.getElementById('cqtd').value);
@@ -22,16 +22,16 @@
                     <h2>A revolução do Google está chegando</h2>
                 </hgroup>
                 
-                <img id="icone" src="_imagens/contato.png"/>
+                <img id="icone" src="imagens/contato.png"/>
 
                 <nav id="menu">
                     <h1>Menu Principal</h1>
                     <ul>
-                        <li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="index.html">Home</a></li>
-                        <li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="specs.html">Especificações</a></li>
-                        <li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
-                        <li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
-                        <li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
+                        <li onmouseover="mudaFoto('imagens/home.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="index.html">Home</a></li>
+                        <li onmouseover="mudaFoto('imagens/especificacoes.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="specs.html">Especificações</a></li>
+                        <li onmouseover="mudaFoto('imagens/fotos.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="fotos.html">Fotos</a></li>
+                        <li onmouseover="mudaFoto('imagens/multimidia.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="multimidia.html">Multimídia</a></li>
+                        <li onmouseover="mudaFoto('imagens/contato.png')" onmouseout="mudaFoto('imagens/contato.png')"><a href="fale-conosco.html">Fale conosco</a></li>
                     </ul>
                 </nav>
             </header>
