novos exercicios aula JS

--- a/curso_js/Módulo E/Aula 14ex/Modelo/modelo.html
+++ b/curso_js/Módulo E/Aula 14ex/Modelo/modelo.html
@@ -22,8 +22,8 @@
 
     </section>
     <footer>
-        <p>Copyright &copy; 2020 - by Stael Sabrina<br>
-            <a href="http://www.linkedin.com/in/staelsabrina" target="_blank">LinkedIn</a> | <a href="http://www.github.com/staelsabrina" target="_blank">GitHub</a></p>
+	<p><strong id="sig">Stael Sabrina</strong><br>
+	<a href="http://www.linkedin.com/in/staelsabrina" target="_blank">LinkedIn</a> | <a href="http://www.github.com/staelsabrina" target="_blank">GitHub</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
