--- a/curso_js/Módulo E/Aula 14ex/ex016/modelo.html
+++ b/curso_js/Módulo E/Aula 14ex/ex016/modelo.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Modelo de Exercício</title>
+    <title>Super Contador</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
-
+        <h1>Vamos contar</h1>
     </header>
+
     <section>
-        <div>
-            Testando...
+        <div id="dados">
+            <p><label for="inicio">Início: </label><input type="number" id="txti" size="25" maxlength="25"></p>
+            <p><label for="fim">Fim: </label><input type="number" id="txtf" size="25" maxlength="25"></p>
+            <p><label for="passo">Passo: </label><input type="number" id="txtp" size="25" max="25"></p>
+            <p><input type="submit" id="botao" value="Contar" onclick="contar()"></p>
         </div>
-        <div>
-            Olá
+        <div id="res">
+            Preparando a contagem...
         </div>
 
     </section>
     <footer>
-        <p>Copyright &copy; 2020 - by Stael Sabrina<br>
-            <a href="http://www.linkedin.com/in/staelsabrina" target="_blank">LinkedIn</a> | <a href="http://www.github.com/staelsabrina" target="_blank">GitHub</a></p>
+        <p><strong id="sig">Stael Sabrina</strong><br>
+        <a href="http://www.linkedin.com/in/staelsabrina" target="_blank">LinkedIn</a> | <a href="http://www.github.com/staelsabrina" target="_blank">GitHub</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
