--- a/curso_js/Módulo E/Aula 14ex/ex017/modelo.html
+++ b/curso_js/Módulo E/Aula 14ex/ex017/modelo.html
@@ -4,26 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Modelo de Exercício</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header>
-        <h1>Título</h1>
+        <h1>Tabuada</h1>
 
     </header>
     <section>
         <div>
-            Testando...
+            <p>Número: <input type="number" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()"></p>
         </div>
         <div>
-            Olá
+            <select name ="tabuada" id="seltab" size="10">
+                <option>Digite um número acima</option>
+            </select>
         </div>
 
     </section>
     <footer>
-        <p>Copyright &copy; 2020 - by Stael Sabrina<br>
-            <a href="http://www.linkedin.com/in/staelsabrina" target="_blank">LinkedIn</a> | <a href="http://www.github.com/staelsabrina" target="_blank">GitHub</a></p>
+	<p><strong id="sig">Stael Sabrina</strong><br>
+	<a href="http://www.linkedin.com/in/staelsabrina" target="_blank">LinkedIn</a> | <a href="http://www.github.com/staelsabrina" target="_blank">GitHub</a></p>
     </footer>
     <script src="script.js"></script>
 </body>
